version 1.1 - XX-Ago-2011
. [NEW] Animation: Added file format. AnimationCache can load animations from file
. [NEW] FileUtils: Added iPad / RetinaDisplay extension. To use it, call [CCFileUtils setiPadSuffix:@"-ipad"] or setRetinaDisplaySuffix (issue #1211)
. [NEW] FileUtils: Added xxxFileExistAtPath for iPad and RetinaDisplay resources
. [NEW] ccConfig: Removed CC_RETINA_DISPLAY_FILENAME_SUFFIX. Use CCFileUtils API instead
. [NEW] ccConfig: Removed CC_RETINA_DISPLAY_SUPPORT. It is always enabled.
. [NEW] TileMap: TMX map supports flipped tiles (issue #1233)
. [FIX] Actions: removed #undef CLAMP (issue #1210)
. [FIX] FileUtils: Loads -hd resources even if the sd resource is not present (issue #1179)
. [FIX] FileUtils: renamed ccRemoveSuffixFromFile to +[CCFileUtils removeSuffixFromFile:];
. [FIX] FileUtils: localized resources can be loaded using fullPathFromRelativePath (issue #1230)
. [FIX] LayerColor: init calls initWithColor:width:height (issue #1226)
. [FIX] SpriteBatchNode: removeAllChildrenWithCleanup works correctly (issue #1216)
. [FIX] Texture2D: drawAtPoint uses the correct vertices
. [FIX] Texture2D: drawAtPoint, drawInRect disables color state (issue #1222)
. [FIX-MAC] Director: Only call set setAcceptsTouchEvents: when OS X >= 10.6 (issue #1225)

version 1.0.1 - 28-July-2011
. [FIX] All: Implicit atomic properties converted to nonatomic
. [FIX] All: Removed deprected code
. [FIX] CCArray: copyWithZone fixed
. [FIX] Director: frames -> totalFrames, and it works as expected. Value is not being reset.
. [FIX] Menu: If any ancestor is invisible, then touches won't be accepted
. [FIX] Node: vertexZ returns points, not "pixels"
. [FIX] LabelTTF: don't crash when calling description after dealloc
. [FIX] Tests: [window release] instead of [window dealloc]
. [FIX] Texture: TextureCache#dump reports the right info (issue #1205)
. [FIX-MAC] CocosDenshion: Cleanup buffers to prevent noise

version 1.0.0 - 13-July-2011