@@ -20,6 +20,10 @@ Contributors (alphabetically ordered):
 * Marco Tillemans (AKA araker: http://www.welcometothefabrik.com/)
 	Texture2D: drawInRect / drawAtPoint disables color state
 	SpriteBatchNode: fixed bug in removeAllChildrenWithCleanup
+	Author of the new reorder Sprite/Node algorithm
+
+* Ricardo Ruiz:
+	Added support for RGB888 textures
 
 * slycrel (http://geopherlite.blogspot.com/)
 	Added support for flipped tiles in TMX maps. Also added test case
