@@ -1,9 +1,11 @@
 version 1.1 - XX-Ago-2011
 . [NEW] Animation: Added file format. AnimationCache can load animations from file
-. [NEW] FileUtils: Added iPad / RetinaDisplay extension. To use it, call [CCFileUtils setiPadSuffix:@"-ipad"] or setRetinaDisplaySuffix (issue #1211)
-. [NEW] FileUtils: Added xxxFileExistAtPath for iPad and RetinaDisplay resources
 . [NEW] ccConfig: Removed CC_RETINA_DISPLAY_FILENAME_SUFFIX. Use CCFileUtils API instead
 . [NEW] ccConfig: Removed CC_RETINA_DISPLAY_SUPPORT. It is always enabled.
+. [NEW] FileUtils: Added iPad / RetinaDisplay extension. To use it, call [CCFileUtils setiPadSuffix:@"-ipad"] or setRetinaDisplaySuffix (issue #1211)
+. [NEW] FileUtils: Added xxxFileExistAtPath for iPad and RetinaDisplay resources
+. [NEW] Node: improved speed when reordering nodes
+. [NEW] Sprite: improved speed when reordering sprites
 . [NEW] TileMap: TMX map supports flipped tiles (issue #1233)
 . [FIX] Actions: removed #undef CLAMP (issue #1210)
 . [FIX] FileUtils: Loads -hd resources even if the sd resource is not present (issue #1179)
